--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <title>?? ???????? ??????</title>
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond:300,400,500,600,700|Roboto+Mono:300,400,500,600,700"
@@ -95,7 +96,7 @@
 
     .a2 {
         left: -290px;
-        top: 190px;
+        top: 170px;
     }
 
     .a3 {
@@ -119,8 +120,8 @@
     }
 
     .b2 {
-        left: -250px;
-        top: 40px;
+        left: -255px;
+        top: 30px;
     }
 
     .b3 {
@@ -129,7 +130,7 @@
     }
 
     .b4 {
-        left: 100px;
+        left: 90px;
         top: -80px;
     }
 
@@ -139,18 +140,19 @@
     }
 
     .d1 {
-        left: -100px;
+        width: 90px;
+        left: -125px;
         top: 100px;
     }
 
     .d2 {
-        width: 80px;
-        left: -120px;
+        width: 70px;
+        left: -115px;
         top: -37px;
     }
 
     .clue.d.d2 {
-        font-size: 9px;
+        font-size: 10px;
     }
 
     .d3 {
@@ -193,25 +195,25 @@
                 <div class="clue a a4">?????</div>
                 <div class="clue a a5">????? ??? ?????</div>
                 <div class="clue b b1">I share a name with<br />a <i>Rogue One</i> actor</div>
-                <div class="clue b b2">I collaborated with<br />a German composer</div>
+                <div class="clue b b2">I collaborated with<br />a male German composer</div>
                 <div class="clue b b3">I have blue eyes</div>
                 <div class="clue b b4">I was played by an actress<br />whose first initial is J</div>
                 <div class="clue b b5">I was born in January</div>
-                <div class="clue d d1">I am male</div>
-                <div class="clue d d2">The first letter of my given name is a chemical element symbol, but the last
-                    letter is not</div>
+                <div class="clue d d1">The last letter of my surname is N</div>
+                <div class="clue d d2">The first letters of our given names are the consonants of a curse word</div>
                 <div class="clue d d3">I can be associated with film or TV</div>
-                <div class="clue d d4">My first name (full version) contains the letter A</div>
+                <div class="clue d d4">My first or last name (but not both) contains a double letter</div>
                 <div class="clue d d5">My first or last initial is M</div>
             </div>
             <div class="venn venn2">
-                <div class="circle c1">&nbsp;</div>
-                <div class="circle c2">&nbsp;</div>
-                <div class="circle c3">&nbsp;</div>
-                <div class="circle c4">&nbsp;</div>
-                <div class="circle c5">&nbsp;</div>
+                <div class="circle c1"></div>
+                <div class="circle c2"></div>
+                <div class="circle c3"></div>
+                <div class="circle c4"></div>
+                <div class="circle c5"></div>
                 <div class="clue a1">An ??? ?????? I Minored in:<br /><b>?????????? ???????????</b></div>
-                <div class="clue a2">A ????? I Composed:<br /><b>?????? ????????<br />?? ? ?????</b></div>
+                <div class="clue a2">A ????? I Helped<br />My Brother Write:<br /><b>?????? ????????<br />?? ? ?????</b>
+                </div>
                 <div class="clue a3">A ???? I Directed:<br /><b>?????????</b></div>
                 <div class="clue a4">A ???? I'm the<br />Title Character of:<br /><b>??? ?????? ?? ?????</b></div>
                 <div class="clue a5">A ???? I ????:<br /><b>(see title)</b></div>
