--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     }
 
     .b1 {
-        left: -100px;
+        left: -120px;
         top: 200px;
     }
 
@@ -194,7 +194,7 @@
                 <div class="clue a a3">??????????? ?????</div>
                 <div class="clue a a4">?????</div>
                 <div class="clue a a5">????? ??? ?????</div>
-                <div class="clue b b1">I share a name with<br />a <i>Rogue One</i> actor</div>
+                <div class="clue b b1">We share a name with<br />the same <i>Rogue One</i> actor</div>
                 <div class="clue b b2">I collaborated with<br />a male German composer</div>
                 <div class="clue b b3">I have blue eyes</div>
                 <div class="clue b b4">I was played by an actress<br />whose first initial is J</div>
